wiki/wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-server-service
  namespace: wiki
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: wiki-js
    app.kubernetes.io/name: wiki
  ports:
  - name: http
    port: 3000
    targetPort: 3000
