wiki/wikijs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: wikijs
    app.kubernetes.io/name: wiki
