wiki/wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  namespace: wiki
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  name: wiki-ingress
  namespace: wiki
spec:
  ingressClassName: nginx
  rules:
  - host: wikijs.luma
    http:
      paths:
      - backend:
          service:
            name: wiki-server-service
            port:
              number: 3000
        path: /
        pathType: Prefix
